--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mariadb": "^2.5.4",
     "node-schedule": "^2.0.0",
     "rss-parser": "^3.12.0",
+    "rss-url-parser": "^2.2.1",
     "telegraf": "^4.4.2"
   }
 }
